// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Button > Snapshots > matches active state snapshot 1`] = `
<button
  class="button button--default button--default-size"
  data-testid="button"
>
  Click me
</button>
`;

exports[`Button > Snapshots > matches default snapshot 1`] = `
<button
  class="button button--default button--default-size"
  data-testid="button"
>
  Click me
</button>
`;

exports[`Button > Snapshots > matches disabled state snapshot 1`] = `
<button
  class="button button--default button--default-size"
  data-testid="button"
  disabled=""
>
  Click me
</button>
`;

exports[`Button > Snapshots > matches hover state snapshot 1`] = `
<button
  class="button button--default button--default-size"
  data-testid="button"
>
  Click me
</button>
`;

exports[`Button > Snapshots > matches loading state snapshot 1`] = `
<button
  class="button button--default button--default-size button--loading"
  data-testid="button"
  disabled=""
>
  Click me
</button>
`;
